--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,10 +1,6 @@
 body, html{
     margin: 0;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .containerLogin{
@@ -56,4 +52,30 @@ input:focus, select:focus{
 span.cadastro{
     color: orange;
     text-decoration: underline;
+}
+
+.containerHome{
+    height: 100%;
+    display: block;
+}
+.containerHome header{
+    margin: 0 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.noMovies{
+    font-size: 6vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+    padding: 5vh 10vw;
+}
+
+@media only screen and (min-width: 600px)  {
+
 }
